fix calendar width on mobile

--- a/src/book/components/BookCalendar.css
+++ b/src/book/components/BookCalendar.css
@@ -1,10 +1,23 @@
 .book-calendar {
-    width: 90%;
     border-radius: 10px;
     background-color: #fff;
     overflow: auto;
   }
-
+  
+  @media (max-width: 767px) {
+    /* appliquez les styles ci-dessous uniquement si la largeur de l'écran est inférieure à 768px (taille de l'écran de téléphone mobile) */
+    .book-calendar {
+      width: 350px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    /* appliquez les styles ci-dessous uniquement si la largeur de l'écran est supérieure ou égale à 768px (taille de l'écran de bureau) */
+    .book-calendar {
+      width: 600px;
+    }
+  }
+  
   .book-calendar-header {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
